--- a/index.html
+++ b/index.html
@@ -1,118 +1,138 @@
+
 <!DOCTYPE html>
-<html lang="en_us">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../favicon.ico">
 
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Turn off telephone number detection. -->
-    <meta name="format-detection" content="telephone=no">
-    <link rel="icon" type="image/ico" href="favicon.ico" />
-    <title>Mastercard Connect: NSIF - List of pages</title>
+    <title>Dashboard Template for Bootstrap</title>
 
-    <link rel="stylesheet" href="styles/b2b.min.css" type="text/css">
-    <link rel="stylesheet" href="styles/nsif.min.css" type="text/css">
+    <!-- Bootstrap core CSS -->
+    <link href="styles/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE9 START -->
-    <!--[if IE 9]>
-		<link rel="stylesheet" href="styles/b2b-ie9.min.css" />
-		<![endif]-->
-    <!-- IE9 END -->
+    <!-- Custom styles for this template -->
+    <link href="styles/dashboard.css" rel="stylesheet">
 
-    <style type="text/css">
-        .list-index {
-            padding: 0;
-            margin: 10px;
-            list-style: none;
-        }
+    <!-- Custom styles for Crypto Allegro -->
+    <link href="styles/crypto-allegro.min.css" rel="stylesheet">
 
-        .list-index li {
-            border-bottom: 1px solid #ddd;
-            padding: 10px 0;
-        }
-    </style>
-
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
-<body>
-    <header>
-        <nav class="navbar primary-nav">
+<body class="crypto">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
             <div class="navbar-header">
-                <button id="mobile-menu" type="button" class="navbar-toggle" data-dismiss="modal">
-                    <i class="fa fa-navicon"></i>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="dashboard.html">
-                    <img src="images/mcc-logo.svg" alt="Mastercard Connect" title="Mastercard Connect">
-                </a>
+                <a class="navbar-brand" href="#">Project name</a>
             </div>
-            <div id="navbar" class="navbar-right navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li class="mc_navLast">
-                        <a href="javascript:void(0);" id="contactUsPopUp2" class="mc-single-nav" data-dismiss="modal">Contact Us</a>
-                    </li>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Help</a></li>
                 </ul>
-            </div>
-        </nav>
-    </header>
-    <section class="page-wrap">
-        <div class="page-wrap__inner">
-            <div class="brand-header">
-                <div class="row dashboard-head col-md-12">
-                    <div class="col-md-12 header">
-                        <div class="col-md-12 row title80">
-                            <h1 class="marginBottom30">Welcome to
-                                <br/>Mastercard Connect</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="placeholder"></div>
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="placeholder"></div>
-                        <h3>Sprint 1</h3>
-                        <p>List of HTML pages.</p>
-                        <div class="placeholder"></div>
-                        <ol class="list-index">
-                            <li>
-                                <a href="nsif-index-noData.html" title="NSIF" target="_blank">Main Screen - No Data</a>
-                            </li>
-                            <li>
-                                <a href="nsif-index.html" title="NSIF" target="_blank">Main Screen - with Data</a>
-                            </li>
-                            <li>
-                                <a href="nsif-ica-summary.html" title="NSIF" target="_blank">ICA Summary Screen</a>
-                            </li>
-                            <li>
-                                <a href="nsif-index-select-ica-modal.html" title="NSIF" target="_blank">Index - ICA Modal</a>
-                            </li>
-                            <li>
-                                <a href="nsif-currency-F67954.html" title="nsif-currency-F67954" target="_blank">Currency F67954</a>
-                            </li>
-                        </ol>
-                    </div>
-                </div>
+                <form class="navbar-form navbar-right">
+                    <input type="text" class="form-control" placeholder="Search...">
+                </form>
             </div>
         </div>
-    </section>
-    <footer class="footer-bottom">
+    </nav>
+
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-8 col-md-push-4 col-sm-push-4 col-xs-12 footer-links">
-                <a href="terms.html" title="Terms of Use, Privacy Policy and Cookie Notice" target="_blank"> Terms of Use, Privacy Policy and Cookie Notice</a>
-            </div>
-            <div class="col-sm-4 col-sm-pull-8 col-xs-12 footer-legal">
-                &copy; 1995 - 2017 Mastercard
+            <!--<div class="col-sm-3 col-md-2 sidebar">
+          <ul class="nav nav-sidebar">
+            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Analytics</a></li>
+            <li><a href="#">Export</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item</a></li>
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+            <li><a href="">More navigation</a></li>
+          </ul>
+          <ul class="nav nav-sidebar">
+            <li><a href="">Nav item again</a></li>
+            <li><a href="">One more nav</a></li>
+            <li><a href="">Another nav item</a></li>
+          </ul>
+        </div>-->
+            <div class="col-md-12 main">
+
+                <div class="placeholder"></div>
+
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>rank</th>
+                                <th>asset name</th>
+                                <th class="right-align">rating/score</th>
+                                <th class="right-align">market cap</th>
+                                <th class="right-align">Price</th>
+                                <th class="right-align">circulating supply</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>Bitcoin</td>
+                                <td class="right-align">B- / 3,856</td>
+                                <td class="right-align">$140,818,681,631</td>
+                                <td class="right-align">$8,194.30</td>
+                                <td class="right-align">17,232,775 BTC</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Bitcoin</td>
+                                <td class="right-align">B- / 3,856</td>
+                                <td class="right-align">$140,818,681,631</td>
+                                <td class="right-align">$8,194.30</td>
+                                <td class="right-align">17,232,775 BTC</td>
+                            </tr>
+                            <tr>
+                                <td>1</td>
+                                <td>Bitcoin</td>
+                                <td class="right-align">B- / 3,856</td>
+                                <td class="right-align">$140,818,681,631</td>
+                                <td class="right-align">$8,194.30</td>
+                                <td class="right-align">17,232,775 BTC</td>
+                            </tr>
+                            
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </footer>
+    </div>
 
-
-    <script type="text/javascript" src="scripts/vendor.js"></script>
-    <script type="text/javascript" src="lib/asset-kit.js"></script>
-    <script type="text/javascript" src="scripts/custom.js"></script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+    </script>
+    <script src="scripts/bootstrap.min.js"></script>
 </body>
-
 </html>
