--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,16 +39,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="#"><img src="images/ca-logo.svg"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a href="#">Help</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="username">Dunder Mifflin</span> <img src="images/Profile_pic.png"> <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#"><i class="fa fa-bell"></i></a></li>
+                    <li><a href="#"><i class="fa fa-cog"></i></a></li>
                 </ul>
-                <form class="navbar-form navbar-right">
+                <form class="navbar-form navbar-left">
                     <input type="text" class="form-control" placeholder="Search...">
                 </form>
             </div>
@@ -96,7 +102,7 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>Bitcoin</td>
+                                <td><a href="#" class="asset-link">Bitcoin</a></td>
                                 <td class="right-align">B- / 3,856</td>
                                 <td class="right-align">$140,818,681,631</td>
                                 <td class="right-align">$8,194.30</td>
@@ -118,7 +124,7 @@
                                 <td class="right-align">$8,194.30</td>
                                 <td class="right-align">17,232,775 BTC</td>
                             </tr>
-                            
+
                         </tbody>
                     </table>
                 </div>
@@ -132,7 +138,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+
     </script>
     <script src="scripts/bootstrap.min.js"></script>
 </body>
+
 </html>
