--- a/index.html
+++ b/index.html
@@ -102,23 +102,39 @@
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td><a href="#" class="asset-link">Bitcoin</a></td>
+                                <td>
+                                    <a href="#" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
+                                </td>
                                 <td class="right-align">B- / 3,856</td>
                                 <td class="right-align">$140,818,681,631</td>
                                 <td class="right-align">$8,194.30</td>
                                 <td class="right-align">17,232,775 BTC</td>
                             </tr>
                             <tr>
-                                <td>1</td>
-                                <td>Bitcoin</td>
+                                <td>2</td>
+                                <td>
+                                    <a href="#" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
+                                </td>
                                 <td class="right-align">B- / 3,856</td>
                                 <td class="right-align">$140,818,681,631</td>
                                 <td class="right-align">$8,194.30</td>
                                 <td class="right-align">17,232,775 BTC</td>
                             </tr>
                             <tr>
-                                <td>1</td>
-                                <td>Bitcoin</td>
+                                <td>3</td>
+                                <td>
+                                    <a href="#" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
+                                </td>
+                                <td class="right-align">B- / 3,856</td>
+                                <td class="right-align">$140,818,681,631</td>
+                                <td class="right-align">$8,194.30</td>
+                                <td class="right-align">17,232,775 BTC</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>
+                                    <a href="#" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
+                                </td>
                                 <td class="right-align">B- / 3,856</td>
                                 <td class="right-align">$140,818,681,631</td>
                                 <td class="right-align">$8,194.30</td>
@@ -128,6 +144,16 @@
                         </tbody>
                     </table>
                 </div>
+
+                <nav aria-label="Page navigation">
+                    <ul class="pagination pagination-sm pull-right">
+                        <li><a href="#" class="active">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li class="disabled"><a href="#">...</a></li>
+                        <li><a href="#">9</a></li>
+                        <li><a href="#">10</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
