--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 </head>
 
 <body class="crypto">
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -39,7 +38,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img src="images/ca-logo.svg"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/ca-logo.svg"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -52,7 +51,7 @@
                         </ul>
                     </li>
                     <li><a href="#"><i class="fa fa-bell"></i></a></li>
-                    <li><a href="#"><i class="fa fa-cog"></i></a></li>
+                    <li><a href="settings.html"><i class="fa fa-cog"></i></a></li>
                 </ul>
                 <form class="navbar-form navbar-left">
                     <input type="text" class="form-control" placeholder="Search...">
