Mobile styling clean up

--- a/settings.html
+++ b/settings.html
@@ -174,11 +174,11 @@
                 <div class="placeholder"></div>
 
                 <div class="row">
-                    <div class="col-md-1">
+                    <div class="col-md-1 col-xs-12">
                         <button class="btn secondary">Cancel</button>
                     </div>
-                    <div class="col-md-1 col-md-offset-4">
-                        <button class="btn btn-success pull-right">Update</button>
+                    <div class="col-md-1 col-md-offset-4 col-xs-12 col-xs-offset-0">
+                        <button class="btn btn-success">Update</button>
                     </div>
                 </div>
             </div>
