first round of Asset Detail page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <tr>
                                 <td>1</td>
                                 <td>
-                                    <a href="#" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
+                                    <a href="asset-details.html" class="asset-link"><img src="images/currency/btc.svg" class="asset-list-icon">Bitcoin (BTC)</a>
                                 </td>
                                 <td class="right-align">B- / 3,856</td>
                                 <td class="right-align">$140,818,681,631</td>
